Added Nav and Header

--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,23 @@
 // Navigation Styles here
+.nav-container{
+    max-width: 800px;
+    width: 100%;
+    margin: 0 auto;
+    .header-nav{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 30px;
+        nav{
+            font-size: 1.6rem;
+            a{
+                text-decoration: none;
+                color: black;
+                padding: 10px;
+            }
+        }
+    }
+}
+.nav-border{
+    border-top: 2px dashed silver;
+}
