--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,5 +1,13 @@
 .home {
-
+  .header-text{
+    border-bottom: 2px dashed @navigation-border;
+    img{
+      padding-bottom: 30px;
+    }
+    p{
+      padding-bottom: 30px;
+    }
+  }
   .content-section {
     margin: 30px 0;
     display: flex;
