--- a/less/home-page.less
+++ b/less/home-page.less
@@ -13,20 +13,33 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-
+    @media @mobile{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
    
     
     .text-content {
       width: 48%;
       padding-right: 1%;
+      @media @mobile{
+        width: 100%;
+      }
     }
 
     .img-content {
       width: 48%;
       padding-left: 1%;
+      @media @mobile{
+        width: 100%;
+      }
 
       img {
         border-radius: 10px;
+        @media @mobile{
+          width: 100%;
+        }
       }
     }
   }
@@ -34,6 +47,9 @@
   .inverse-content {
     padding-bottom: 30px;
     border-bottom: 2px dashed @navigation-border;
+    @media @mobile{
+      flex-direction: column-reverse;
+    }
 
     .text-content {
       padding-left: 1%;
@@ -49,23 +65,42 @@
   .content-destination {
     width: 75%;
     margin: 0 auto 30px;
+    @media @mobile{
+      width: 100%;
+    }
 
     img {
       border-radius: 10px;
     }
   }
 
-  .content-pick {
+  .content-pick { 
     padding-top: 30px;
     border-top: 2px dashed @navigation-border;
     display: flex;
     justify-content: space-between;
+    @media @mobile{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
 
     .destination {
       width: 30%;
       margin-bottom: 30px;
-      .btn{
+      @media @mobile{
+        width: 75%;
+        margin: 30px auto;
+      }
+      .btn-div{
+        text-align: center;
+      }
+      .btn{ 
         .button();
+        @media @mobile{
+          width: 75%;
+          text-align: center;
+        }
       }
     }
   }
