--- a/less/navigation.less
+++ b/less/navigation.less
@@ -21,3 +21,19 @@
 .nav-border{
     border-top: 2px dashed silver;
 }
+//Mobile
+.nav-container{
+    @media @mobile{
+        max-width: 500px;
+        width: 100%;
+        margin: 0 auto;
+    }
+    .header-nav{
+        display: flex;
+        flex-direction: column;
+        padding: 10px;
+        h1{
+            padding: 10px;
+        }
+    }
+}
